c4prj2_input/grade.txt
Grading at Wed Apr  3 01:40:42 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:23:2: error: expected ‘;’ before ‘}’ token
  }
  ^
Compilation of input.c failed

Overall Grade: F
